# gm-docs-parser

./: .gitignore  2301.json  Cargo.toml  README.md
.github/workflows/: main.yaml
data/: docs.json  helpdocs_keywords.json  helpdocs_tags.json  weirdos.json
src/: arg.rs  lib.rs  main.rs  markdown.rs  parse_constants.rs  parse_file.rs  parse_fnames.rs
