[package]
name = "gm-docs-parser"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"

[lib]
name = "gm_docs_parser"
path = "src/lib.rs"

[[bin]]
name = "gm-docs-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
selectors = "0.22"
ego-tree = "0.6"
log = "0.4"
env_logger = "0.7"
fehler = "1.0"
url = { version = "2.1", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3