[package]
name = "gm-docs-parser"
version = "1.0.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 manual pages"
repository = "https://github.com/sanbox-irl/gm-docs-parser"
readme = "README.md"

[lib]
name = "gm_docs_parser"
path = "src/lib.rs"

[[bin]]
name = "gm-docs-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
selectors = "0.23"
ego-tree = "0.6"
log = "0.4"
env_logger = "0.9"
fehler = "1.0"
url = { version = "2.1", features = ["serde"] }
clap = "3.0.0-beta.2"
once_cell = "1.4"

[profile.dev.package."*"]
opt-level = 3